--- a/2021_CommitteeStuff/index.html
+++ b/2021_CommitteeStuff/index.html
@@ -48,7 +48,7 @@ class: center, middle, inverse, title-slide
 + We cannot feasibly, empirically measure all network so we need a toolset to predict them -&gt; `Project One Ring`
 + Let's see how well this works while also providing a 'management tool' -&gt; `Project Pokedex`
 + Okay cool but what about the networks in *my* landscape -&gt; `Project Wombat`
-+ But also how are networks percieved? What is complexity anyway -&gt; `Project Malcom` (this link is iffy at best...)
++ But also how are networks percieved? What is complexity anyway and what constrains it -&gt; `Project Malcom` (this link is iffy at best...)
 
 ---
 
