✏️ title slide change

--- a/2021_GitHubPrimer_PFTC/index.html
+++ b/2021_GitHubPrimer_PFTC/index.html
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 
 # A GitHub Primer
 ## <p>but mostly houskeeping rules</p>
-### <p><strong>Tanya Strydom</strong>🐾<br> PhD Student<br> <a href="https://poisotlab.io">Poisot Lab</a></p>
+### <p><strong>Tanya Strydom</strong>🐾<br> <em>disclaimer very simple slides ahead</em></p>
 ### <p>07 May 2021</p>
 
 ---
