:rocket: added some resources

--- a/2021_GitHubPrimer_PFTC/index.html
+++ b/2021_GitHubPrimer_PFTC/index.html
@@ -192,6 +192,16 @@ pull request that 1) makes sure there are no conflicts and 2) allows for **revie
   &lt;img src="img/Comment.png" width="60%" /&gt;&lt;/span&gt;
 
 ---
+# Before we push we need to commit
+
++ 'Pushing' is essentially sending (&amp; saving) the work you did on your local device to the online world
+
++ Each push needs to come with a commit message - this is a record of what you did/ changes you made
+
++ Committing is 'cheap' (at least in the world of git)
+  + You can (should) commit multiple times during a session
+
+---
 # Informative commit messages
 
 .center[I like to say the information is in the emojj... but maybe not always. *i.e. I just want to have fun with commit messages here...* ]
@@ -269,6 +279,25 @@ pull request that 1) makes sure there are no conflicts and 2) allows for **revie
   top: 60%;
   left: 60%;"&gt;
   &lt;img src="img/octobiwan.png" width="70%" /&gt;&lt;/span&gt;
+
+---
+# Useful Resources
+
+#### GitHub + RStudio (*i.e.* the Aud &amp; Richard collection)
+
++ [Intro](https://bioceed.uib.no/dropfolder/sites/bioSTATS-and-R/DataManagement/GitTutorial.html#01_Why_we_use_version_control) to version control
++ [Branching](https://bioceed.uib.no/dropfolder/sites/bioSTATS-and-R/DataManagement/BranchTutorials.html)
++ [Forking](https://bioceed.uib.no/dropfolder/sites/bioSTATS-and-R/DataManagement/ForkTutorial.html)
+
+#### [{Usethis}](https://usethis.r-lib.org/articles/articles/git-credentials.html) a new R specific package to make working withGitHub a bit easier
+
++ The Aud &amp; Richard collection should cover this but thought to throw it in anyway...
+
+#### Homebrew for MacOS users
+
++ Sometimes MacOS makes life challenging - installing git can be one of them (at least last time I checked)
++ You can use [Homebrew](https://brew.sh) to install git (and a whole host of other things at some point so highly recommend) 
++ [This](https://jennybc.github.io/2014-05-12-ubc/ubc-r/session03_git.html) tutorial does a pretty great walk-through after that
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
