:see_no_evil: forgot the github emoji cheatsheet!!

--- a/2021_GitHubPrimer_PFTC/index.html
+++ b/2021_GitHubPrimer_PFTC/index.html
@@ -204,11 +204,13 @@ pull request that 1) makes sure there are no conflicts and 2) allows for **revie
 ---
 # Informative commit messages
 
-.center[I like to say the information is in the emojj... but maybe not always. *i.e. I just want to have fun with commit messages here...* ]
+.center[I like to say the information is in the emojj... but maybe not always. *i.e. I just want to have fun with commit messages here...* 
+
+[Github emoji cheatsheet](https://github.com/ikatyang/emoji-cheat-sheet/blob/master/README.md)]
 
 &lt;span style="margin: 0;
   position: absolute;
-  top: 40%;
+  top: 47%;
   left: 10%;"&gt;
   &lt;img src="img/Commit1.png" width="60%" /&gt;&lt;/span&gt;
   
